[gd_scene load_steps=2 format=3 uid="uid://bt1o88yeyub4g"]

[ext_resource type="Script" path="res://src/ui/main_menu/controls_menu/keybind_changer.gd" id="1"]

[node name="keybind_changer" type="HBoxContainer" groups=["Keybind Changer"]]
offset_right = 112.0
offset_bottom = 17.0
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 4
script = ExtResource("1")

[node name="action_label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 7
mouse_filter = 1
horizontal_alignment = 2

[node name="Button" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
shortcut_in_tooltip = false

[connection signal="focus_entered" from="action_label" to="action_label" method="_on_main_menu_text_button_focus_entered"]
[connection signal="focus_exited" from="action_label" to="action_label" method="_on_main_menu_text_button_focus_exited"]
[connection signal="gui_input" from="action_label" to="action_label" method="_on_main_menu_text_button_gui_input"]
[connection signal="mouse_entered" from="action_label" to="action_label" method="_on_main_menu_text_button_mouse_entered"]
[connection signal="mouse_exited" from="action_label" to="action_label" method="_on_main_menu_text_button_mouse_exited"]
[connection signal="focus_entered" from="Button" to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_Button_focus_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
